<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#ffffff">
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_1"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>
            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_2"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>
            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_3"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>
            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_4"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>

        </LinearLayout><LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_5"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>
            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_6"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>
            <Button
                android:id="@+id/btn_7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_7"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>
            <Button
                android:id="@+id/btn_8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_8"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>

        </LinearLayout><LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_9"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>
            <Button
                android:id="@+id/btn_10"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_10"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>
            <Button
                android:id="@+id/btn_11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_11"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>
            <Button
                android:id="@+id/btn_12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_12"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row123"/>

        </LinearLayout><LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_13"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_13"
                android:textSize="@dimen/_30ssp"
                android:textColor="#ffffff"
                android:background="@color/row4"/>
            <Button
                android:id="@+id/btn_14"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_14"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row4"/>
            <Button
                android:id="@+id/btn_15"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_15"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row4"/>
            <Button
                android:id="@+id/btn_16"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_16"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row4"/>
        <Button
                android:id="@+id/btn_17"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/btn_17"
                android:textSize="@dimen/_40ssp"
                android:textColor="#ffffff"
                android:background="@color/row4"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>